--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 mysql-connector-python==8.2.0
 protobuf==4.21.12
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 PyMySQL==1.1.0
 Werkzeug==3.0.1
