--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,10 @@
-beautifulsoup4==4.10.0
 blinker==1.6.2
-Brlapi==0.8.3
-certifi==2020.6.20
-chardet==4.0.0
 click==8.1.6
-colorama==0.4.4
-command-not-found==0.3
-configobj==5.0.6
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-defer==1.0.6
-distro==1.7.0
-eyeD3==0.8.10
-filelock==3.6.0
 Flask==3.0.0
-grpcio==1.30.2
-httplib2==0.20.2
-idna==3.3
-ifaddr==0.1.7
-IMDbPY==2021.4.18
 importlib-metadata==4.6.4
 itsdangerous==2.1.2
-jeepney==0.7.1
 Jinja2==3.1.2
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-louis==3.20.0
-macaroonbakery==1.3.1
-Mako==1.1.3
 MarkupSafe==2.1.3
-mysql-connector-python==8.2.0
-protobuf==4.21.12
-psycopg2==2.9.9
 psycopg2-binary==2.9.9
-PyMySQL==1.1.0
 Werkzeug==3.0.1
+zipp==3.17.0
